# psa_utils

./: .gitignore  README.md  environment.yml  psa_utils_demo.ipynb  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
psa_utils/: __init__.py  common.py  ctli_type.yml  download.py  geogen.py  ingestion_test.yml  internal.py  packager.py  pdap.py  tap.py
psa_utils/templates/: minimal_test_product.csv  minimal_test_product.xml  product_delivery_template.xml
