[metadata]
name = psa_utils
version = 0.3,0
description = A collection of PSA utilities
long_description = file: README.md
long_description_content_type= text/markdown
keywords = PDS, PDS4, archive, data, PSA, ESA

[options]
zip_safe = False
include_package_data = True

packages = find:
python_requires = >=3.10

install_requires =
    pandas
    pyyaml
    astropy
    pyvo
    numpy
    lxml
    matplotlib
    requests
    astroquery
    pds4_utils >= 0.2
